# eafc26-kit

./: .cursorrules  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  env.example  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/: README.md
.claude/agents/: README.md  architecture-agent.md  project-manager-agent.md  testing-agent.md
.claude/docs/: agent-code-mapping.md  code-organization.md  testing-guide.md
.claude/examples/: README.md
.claude/plans/: 00-overview.md  01-phase-1-foundation.md  02-phase-2-selenium-auth.md  03-phase-3-challenge-extraction.md  04-phase-4-challenge-crud.md  05-phase-5-solver.md  06-phase-6-integration.md  07-phase-7-ui.md  floating-chasing-blossom.md
agents/: README.md  architecture-agent.md  backend-agent.md  ea-fc-agent.md  frontend-agent.md  project-manager-agent.md  testing-agent.md
apps/api/: package.json  project.json  tsconfig.json
apps/control-panel/: jest.config.ts  next.config.js  package.json  project.json  tailwind.config.js  tsconfig.json
apps/sbc-solver/: project.json  pyproject.toml  requirements.txt
apps/sbc-solver/src/: main.py
apps/sbc-solver/src/api/: routes.py
apps/sbc-solver/src/solver/: __init__.py  constraint_builder.py  models.py  objective.py  or_tools_solver.py
docs/: api-selenium-endpoints.md  api-spec.md  architecture.md  development-guide.md  import-patterns.md  persistent-chrome-workflow.md  sbc-solver-spec.md  selenium-2fa-guide.md  selenium-integration.md
examples/: README.md
examples/backend/: example.dto.ts  (+1 more)
(+117 files in other folders)
